@@ -178,7 +178,7 @@ namespace Castle.Components.Binder.Tests
 			Person person = instance as Person;
 			Assert.IsNotNull(person);
 			Assert.AreEqual(person.Age, age);
-			Assert.IsNull(person.Name);
+			Assert.AreEqual(person.Name, name);
 			Assert.AreEqual(person.Assets, assets);
 		}
 
