@@ -63,6 +63,10 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "TestSiteARSupport-vs2003", 
 	ProjectSection(ProjectDependencies) = postProject
 	EndProjectSection
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Castle.Components.Binder-vs2003", "..\Components\General\Binder\Castle.Components.Binder\Castle.Components.Binder-vs2003.csproj", "{98F19522-C9B8-400D-8A12-DABB3DA9411D}"
+	ProjectSection(ProjectDependencies) = postProject
+	EndProjectSection
+EndProject
 Global
 	GlobalSection(SolutionConfiguration) = preSolution
 		Debug = Debug
@@ -76,11 +80,9 @@ Global
 		{EC393863-333E-49CE-94A6-654B9F323954}.Release.ActiveCfg = Release|.NET
 		{EC393863-333E-49CE-94A6-654B9F323954}.Release.Build.0 = Release|.NET
 		{844F5EC4-9224-42A9-986D-CE645AC970F2}.Debug.ActiveCfg = Debug|.NET
-		{844F5EC4-9224-42A9-986D-CE645AC970F2}.Debug.Build.0 = Debug|.NET
 		{844F5EC4-9224-42A9-986D-CE645AC970F2}.Release.ActiveCfg = Release|.NET
 		{844F5EC4-9224-42A9-986D-CE645AC970F2}.Release.Build.0 = Release|.NET
 		{E572DC59-2A96-482F-BE39-E938AB47EA9D}.Debug.ActiveCfg = Debug|.NET
-		{E572DC59-2A96-482F-BE39-E938AB47EA9D}.Debug.Build.0 = Debug|.NET
 		{E572DC59-2A96-482F-BE39-E938AB47EA9D}.Release.ActiveCfg = Release|.NET
 		{E572DC59-2A96-482F-BE39-E938AB47EA9D}.Release.Build.0 = Release|.NET
 		{ECCA4D19-65D7-4EED-B8EC-56AF79F41E69}.Debug.ActiveCfg = Debug|.NET
@@ -88,15 +90,12 @@ Global
 		{ECCA4D19-65D7-4EED-B8EC-56AF79F41E69}.Release.ActiveCfg = Release|.NET
 		{ECCA4D19-65D7-4EED-B8EC-56AF79F41E69}.Release.Build.0 = Release|.NET
 		{824EC872-2992-4518-8C41-4F87640D752A}.Debug.ActiveCfg = Debug|.NET
-		{824EC872-2992-4518-8C41-4F87640D752A}.Debug.Build.0 = Debug|.NET
 		{824EC872-2992-4518-8C41-4F87640D752A}.Release.ActiveCfg = Release|.NET
 		{824EC872-2992-4518-8C41-4F87640D752A}.Release.Build.0 = Release|.NET
 		{7FB1D2DC-5CA8-410C-9B9A-3DE517B3BE3A}.Debug.ActiveCfg = Debug|.NET
-		{7FB1D2DC-5CA8-410C-9B9A-3DE517B3BE3A}.Debug.Build.0 = Debug|.NET
 		{7FB1D2DC-5CA8-410C-9B9A-3DE517B3BE3A}.Release.ActiveCfg = Release|.NET
 		{7FB1D2DC-5CA8-410C-9B9A-3DE517B3BE3A}.Release.Build.0 = Release|.NET
 		{153BE1A6-69CD-4BBE-B90D-FF3D3B42D2E8}.Debug.ActiveCfg = Debug|.NET
-		{153BE1A6-69CD-4BBE-B90D-FF3D3B42D2E8}.Debug.Build.0 = Debug|.NET
 		{153BE1A6-69CD-4BBE-B90D-FF3D3B42D2E8}.Release.ActiveCfg = Release|.NET
 		{153BE1A6-69CD-4BBE-B90D-FF3D3B42D2E8}.Release.Build.0 = Release|.NET
 		{2409063E-BE05-4596-A677-758096D1C759}.Debug.ActiveCfg = Debug|.NET
@@ -104,36 +103,34 @@ Global
 		{2409063E-BE05-4596-A677-758096D1C759}.Release.ActiveCfg = Release|.NET
 		{2409063E-BE05-4596-A677-758096D1C759}.Release.Build.0 = Release|.NET
 		{8C6EA891-66AF-4F48-A2CB-98669D5E7AA9}.Debug.ActiveCfg = Debug|.NET
-		{8C6EA891-66AF-4F48-A2CB-98669D5E7AA9}.Debug.Build.0 = Debug|.NET
 		{8C6EA891-66AF-4F48-A2CB-98669D5E7AA9}.Release.ActiveCfg = Release|.NET
 		{8C6EA891-66AF-4F48-A2CB-98669D5E7AA9}.Release.Build.0 = Release|.NET
 		{C4107B52-109E-4629-A202-58E93917C80B}.Debug.ActiveCfg = Debug|.NET
-		{C4107B52-109E-4629-A202-58E93917C80B}.Debug.Build.0 = Debug|.NET
 		{C4107B52-109E-4629-A202-58E93917C80B}.Release.ActiveCfg = Release|.NET
 		{C4107B52-109E-4629-A202-58E93917C80B}.Release.Build.0 = Release|.NET
 		{30F513CB-9520-4E43-A845-3185D76F38B9}.Debug.ActiveCfg = Debug|.NET
 		{30F513CB-9520-4E43-A845-3185D76F38B9}.Release.ActiveCfg = Release|.NET
 		{30F513CB-9520-4E43-A845-3185D76F38B9}.Release.Build.0 = Release|.NET
 		{6C51A1E3-7F20-4696-BFD6-829134678341}.Debug.ActiveCfg = Debug|.NET
-		{6C51A1E3-7F20-4696-BFD6-829134678341}.Debug.Build.0 = Debug|.NET
 		{6C51A1E3-7F20-4696-BFD6-829134678341}.Release.ActiveCfg = Release|.NET
 		{6C51A1E3-7F20-4696-BFD6-829134678341}.Release.Build.0 = Release|.NET
 		{DDE1A9F0-4CD6-454E-A9DB-B56946F34ED5}.Debug.ActiveCfg = Debug|.NET
-		{DDE1A9F0-4CD6-454E-A9DB-B56946F34ED5}.Debug.Build.0 = Debug|.NET
 		{DDE1A9F0-4CD6-454E-A9DB-B56946F34ED5}.Release.ActiveCfg = Release|.NET
 		{DDE1A9F0-4CD6-454E-A9DB-B56946F34ED5}.Release.Build.0 = Release|.NET
 		{7439F3D3-5F1B-4D03-ADE1-8EB85F711A53}.Debug.ActiveCfg = Debug|.NET
-		{7439F3D3-5F1B-4D03-ADE1-8EB85F711A53}.Debug.Build.0 = Debug|.NET
 		{7439F3D3-5F1B-4D03-ADE1-8EB85F711A53}.Release.ActiveCfg = Release|.NET
 		{7439F3D3-5F1B-4D03-ADE1-8EB85F711A53}.Release.Build.0 = Release|.NET
 		{22432F75-FD21-474A-AB8F-43100DE79FDB}.Debug.ActiveCfg = Debug|.NET
-		{22432F75-FD21-474A-AB8F-43100DE79FDB}.Debug.Build.0 = Debug|.NET
 		{22432F75-FD21-474A-AB8F-43100DE79FDB}.Release.ActiveCfg = Release|.NET
 		{22432F75-FD21-474A-AB8F-43100DE79FDB}.Release.Build.0 = Release|.NET
 		{0F1BFB63-76D3-4470-891B-3B2519B36D2B}.Debug.ActiveCfg = Debug|.NET
 		{0F1BFB63-76D3-4470-891B-3B2519B36D2B}.Debug.Build.0 = Debug|.NET
 		{0F1BFB63-76D3-4470-891B-3B2519B36D2B}.Release.ActiveCfg = Release|.NET
 		{0F1BFB63-76D3-4470-891B-3B2519B36D2B}.Release.Build.0 = Release|.NET
+		{98F19522-C9B8-400D-8A12-DABB3DA9411D}.Debug.ActiveCfg = Debug|.NET
+		{98F19522-C9B8-400D-8A12-DABB3DA9411D}.Debug.Build.0 = Debug|.NET
+		{98F19522-C9B8-400D-8A12-DABB3DA9411D}.Release.ActiveCfg = Release|.NET
+		{98F19522-C9B8-400D-8A12-DABB3DA9411D}.Release.Build.0 = Release|.NET
 	EndGlobalSection
 	GlobalSection(SolutionItems) = postSolution
 		Changes.txt = Changes.txt
