@@ -187,6 +187,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Controllers\UserController.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Model\Account.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
@@ -218,6 +223,11 @@
                 />
                 <File
                     RelPath = "Model\SimplePerson.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Model\User.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
@@ -347,6 +357,14 @@
                 />
                 <File
                     RelPath = "Views\ProductLicense\update.vm"
+                    BuildAction = "None"
+                />
+                <File
+                    RelPath = "Views\User\insert.vm"
+                    BuildAction = "None"
+                />
+                <File
+                    RelPath = "Views\User\new.vm"
                     BuildAction = "None"
                 />
             </Include>
