@@ -1,0 +1,12 @@
+<html>
+<body>
+
+#foreach($error in $errorlist)
+  binding error $error.Key $error.Parent $error.Property $error.Exception <br/>
+#end
+
+<span id="newid">$user.id</span>
+<span id="name">$user.Name</span>
+
+</body>
+</html>
