@@ -1,0 +1,46 @@
+## Copyright 2004-2006 Castle Project - http:##www.castleproject.org/
+## 
+## Licensed under the Apache License, Version 2.0 (the "License");
+## you may not use this file except in compliance with the License.
+## You may obtain a copy of the License at
+## 
+##     http:##www.apache.org/licenses/LICENSE-2.0
+## 
+## Unless required by applicable law or agreed to in writing, software
+## distributed under the License is distributed on an "AS IS" BASIS,
+## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+## See the License for the specific language governing permissions and
+## limitations under the License.
+
+require '../common'
+
+class User
+
+	class << self
+
+		include Test::Unit::Assertions
+
+		def create(ie, name)
+
+			ie.goto("#{$base_url}/user/new.castle")
+
+			ie.text_field(:id, "user_name").set(name)
+			
+			ie.button(:id, 'insertbutton').click
+
+			# Check for errors
+			
+			fail('There were databind errors') if ie.contains_text('binding error')
+			fail('Unexpected exception') if ie.contains_text('Exception')
+			
+			assert_equal(name, ie.span(:id, 'name').text, 'Insert: Name was not set')
+
+			# returns new created id
+			
+			ie.span(:id, 'newid').text
+			
+		end
+		
+	end
+
+end
